[gd_scene load_steps=25 format=2]

[ext_resource path="res://shadows/LargeShadow.png" type="Texture" id=1]
[ext_resource path="res://enemies/angel.png" type="Texture" id=2]
[ext_resource path="res://enemies/enemy.gd" type="Script" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hitboxes and Hurtboxes/EnemyHitbox.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 366, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 488, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 610, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 732, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 854, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 976, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 117, 122, 117 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 122, 117, 122, 117 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 122, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 244, 0, 122, 117 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Fly",
"speed": 8.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 12.0
height = 0.01

[sub_resource type="CapsuleShape2D" id=11]
height = 10.43

[sub_resource type="CircleShape2D" id=15]

[sub_resource type="CapsuleShape2D" id=16]
height = 19.8

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Fly"
frame = 4
playing = true

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -2, 44 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 36 )
shape = SubResource( 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, 25 )
shape = SubResource( 11 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 300

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 0.984314, 0.0784314, 0.0784314, 0.439216 )
scale = Vector2( 100, 100 )
shape = SubResource( 15 )

[node name="EnemyHitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 2
script = ExtResource( 8 )
damage = 10

[node name="CollisionShape2D" parent="EnemyHitbox" index="0"]
position = Vector2( -1, 36 )
shape = SubResource( 16 )

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackWindow" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="half_health" from="Stats" to="." method="_on_Stats_half_health"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetection"]
[editable path="EnemyHitbox"]
